objects/Oppty_Approval_Regional_SLAs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the Opportunity Approval SLA values for combinations of Type and Region, including the number of days when the quarter end SLA override will apply</description>
    <fields>
        <fullName>Opportunity_Approval_Queue_Association__c</fullName>
        <description>What it does? Indicates the name of the associated approval queue to which the opportunity approval should be associated
Downstream Impact? Used in the automated creation of an Opportunity Approval from the opportunity helpers
Owner? Finance/Order Management</description>
        <label>Opportunity Approval Queue Association</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_End_SLA_Duration_Days__c</fullName>
        <description>What it Does? The number of days at the quarter end for which the QE SLA applied 
Owner? Finance/Order Management</description>
        <label>Quarter End SLA Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_End_SLA_Hours__c</fullName>
        <description>What it Does? The number of hours for the SLA during quarter end of the Opportunity Approval record used in combination with the Type and Region
Owner? Finance/Order Management</description>
        <label>Quarter End SLA Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>What it Does? The Region of the Opportunity Approval record to which the SLAs will apply
Owner? Finance/Order Management</description>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_SLA_Hours__c</fullName>
        <description>What it Does? The number of hours for the standard SLA of the Opportunity Approval record used in combination with the Type and Region
Owner? Finance/Order Management</description>
        <label>Standard SLA Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What it Does? The Type of the Opportunity Approval record to which the SLAs will apply
Owner? Finance/Order Management</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Approval Regional SLAs</label>
    <listViews>
        <fullName>Opportunity_Approval_SLAs_All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Region__c</columns>
        <columns>Standard_SLA_Hours__c</columns>
        <columns>Quarter_End_SLA_Hours__c</columns>
        <columns>Quarter_End_SLA_Duration_Days__c</columns>
        <columns>Opportunity_Approval_Queue_Association__c</columns>
        <filterScope>Everything</filterScope>
        <label>Opportunity Approval SLAs All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>